# sylo

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
deploy/systemd/: sylo-receiver.service  sylo-retention.service  sylo-webapp.service  sylo.env.example
doc/: open_issues.md  sylo-plan.md
packaging/inno/: sylo.iss
packaging/pyinstaller/: entry_receiver.py  entry_retention.py  entry_webapp.py  receiver.spec  retention.spec  webapp.spec
sylo/: parser.py  stats.py  timeutil.py
sylo/indexer/: config.py  core.py  rebuild.py  schema.py
sylo/receiver/: config.py  device_writer.py  envelope.py  health.py  main.py  parser.py  server.py  stats.py  winservice.py
sylo/retention/: config.py  core.py  main.py  winservice.py
sylo/webapp/: app.py  appdb.py  auth.py  config.py  deps.py  main.py  queries.py  receiver_health.py  winservice.py
sylo/webapp/routes/: auth.py  devices.py  health.py  help.py  messages.py  settings.py  users.py
sylo/webapp/static/: localtime.js  style.css  userpanel.js
sylo/webapp/templates/: _results.html  _tail_row.html  account.html  base.html  devices.html  help.html  login.html  messages.html  retention.html  users.html
tests/: test_appdb.py  test_auth.py  test_device_writer.py  test_indexer.py  test_parser.py  test_queries.py  test_rebuild.py  test_receiver_health_reader.py  test_receiver_startup_retry.py  test_retention.py  test_retention_startup_retry.py  test_server.py  test_sse.py  test_users.py  test_webapp.py  test_winservice.py
